--- a/index.html
+++ b/index.html
@@ -9,7 +9,41 @@
     </head>
     
     <body>
+   <section> <h1> top 3 interns of HNGi7</h1> <button>Import files</button>
+<div class="boxes">
+ 
+    <div class="box1">
+      <div class="position">
+      <h1> 1st</h1>
+      <img src="img/icon.png" ></div>
+<img src="img/Ellipse 2.png" id="profile">
+<h2>Jane Okoh</h2>
+<p>Developer</p>
+<div class="points"><h1>420</h1></div>
+    </div>
 
+    <div class="box2">
+  <div class="position" > <h1> 2nd</h1> <img src="img/icon.png"></div>
+<img src="img/Ellipse 2 (1).png" id="profile">
+<h2> Mike Ono</h2>
+<p>Designer</p>
+<div class="points"><h1>364</h1></div>
+
+    </div>
+
+    <div class="box3">
+<div class="position">
+      <h1>3rd</h1>
+      <img src="img/icon.png"></div>
+<img src="img/Ellipse 2 (2).png" id="profile">
+<h2>Theresa Amy</h2>
+<p>Developer</p>
+<div class="points"><h1>260</h1></div>
+
+    </div>
+
+</div>
+</section>  
 
 
         
